# curriculum_00_ai_shunsuke-nishimori

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
.Trash-0/info/: Untitled.ipynb.trashinfo
.devcontainer/: devcontainer.json
notebooks/part1/: part1.ipynb  xgb_submission.csv
oscommand/: os10.txt  os9.txt
part2/assignment1/: CNN.ipynb  fully_connected.ipynb
part2/assignment2/: word2vec.ipynb
part3/: check.py  dataset.jsonl  finetune.py  rag.ipynb  rag.py
part4/cd/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
part4/cd/api/: db.py  main.py  migrate_db.py  model_inference.py  nihon_shokuhin.csv
part4/cd/api/cruds/: __init__.py  done.py  task.py
part4/cd/api/models/: task.py
part4/cd/api/routers/: __init__.py  done.py  task.py
part4/cd/api/schemas/: __init__.py  done.py  task.py
part4/cd/tests/: test_main.py
part4/fastapi/: Dockerfile  docker-compose.yml  pyproject.toml
part4/fastapi/api/cruds/: task.py
part4/kansai-dialect/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: main.py
