[project]
name = "your_project"
version = "0.1.0"
description = "A Python machine learning project using uv and Docker"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25.0",
    "pandas>=1.5",
    "scikit-learn>=1.1",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "xgboost>=2.1.3",
    "lightgbm>=4.5.0",
    "ipython>=8.30.0",
    "jupyter>=1.1.1",
    "ruff>=0.8.1",
    "openai>=1.59.4",
    "python-dotenv>=1.0.1",
    "llama-index>=0.12.10",
    "pymupdf>=1.25.1",
    "datasets>=3.2.0",
    "llama-index-readers-file>=0.4.2",
    "llama-index-vector-stores-postgres>=0.4.1",
    "llama-index-embeddings-openai>=0.3.1",
    "psycopg2-binary>=2.9.10",
    "pgvector>=0.3.6",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "greenlet>=3.1.1",
    "llama-index-llms-llama-cpp>=0.3.0",
    "ipywidgets>=8.1.5",
    "chromadb>=0.6.3",
    "llama-index-llms-openai>=0.3.12",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=3.5",
    "ipykernel>=6.15"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-include = ["*.ipynb"]
