[project]
name = "demo-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "fastapi>=0.115.8,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "sqlalchemy>=2.0.37,<3.0.0",
    "aiomysql>=0.2.0,<0.3.0",
    "pydantic>=2.10.6,<3.0.0",
    "openai>=1.59.4",
    "pandas>=1.5",
    "llama-index>=0.12.10",
    "llama-index-vector-stores-chroma (>=0.4.1,<0.5.0)",
    "greenlet (>=3.1.1,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"
aiosqlite = "^0.21.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"